# crypto-ai-research-terminal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CRYPTO_AI_TERMINAL_SCOPE.md  README.md  SCOPE.md  TODO.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python-backend.instructions.md  react-frontend.instructions.md
.github/workflows/: ci.yml
backend/app/: cli.py  config.py  exceptions.py  logging_config.py  main.py
backend/app/ai/: __init__.py  llm_provider.py  narrative_detector.py  project_classifier.py  summary_cache_service.py  summary_generator.py  whitepaper_analyzer.py  whitepaper_cache_service.py
backend/app/alerts/: alert_evaluator.py  alert_formatter.py  alert_rules.py  telegram_bot.py
backend/app/analysis/: cycle_data_collector.py  cycle_detector.py  narrative_persister.py  narrative_trend.py
backend/app/backtesting/: cycle_config.py  cycle_report.py  data_loader.py  ground_truth.py  historical_data_collector.py  historical_scorer.py  multi_cycle_collector.py  performance_metrics.py  real_cycle_prices.py  simulation_engine.py  validation_metrics.py  weight_calibrator.py
backend/app/collectors/: base_collector.py  coingecko_collector.py  coinmarketcap_collector.py  defillama_collector.py  exchange_monitor.py  github_collector.py  social_collector.py  subreddit_map.py  twitter_twikit_collector.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/graph/: centrality_analyzer.py  community_detector.py  ecosystem_tracker.py  graph_builder.py  live_graph_builder.py  price_correlation.py
backend/app/ml/: cycle_leader_model.py  feature_builder.py  listing_predictor.py  model_trainer.py
backend/app/models/: __init__.py  ai_analysis.py  alert.py  dev_activity.py  historical_candle.py  historical_snapshot.py  market_data.py  narrative.py  score.py  scoring_weight.py  signal.py  social_data.py  token.py
backend/app/processors/: anomaly_detector.py  dev_processor.py  market_processor.py  normalizer.py  sentiment_analyzer.py  social_processor.py
backend/app/reports/: markdown_generator.py  pdf_generator.py
backend/app/risk/: manipulation_detector.py  rugpull_detector.py  tokenomics_risk.py  whale_tracker.py
backend/app/scheduler/: digest.py  jobs.py
backend/app/scoring/: __init__.py  fundamental_scorer.py  growth_scorer.py  heuristic_sub_scorer.py  listing_scorer.py  narrative_scorer.py  opportunity_engine.py  pipeline_scorer.py  risk_scorer.py  score_explainer.py  token_category.py  token_filter.py  weight_service.py
backend/app/signals/: listing_signals.py
backend/migrations/: env.py
backend/migrations/versions/: 3587d61f0e41_add_historical_snapshots_table.py  a1b2c3d4e5f6_add_historical_candles_table.py  a7b8c9d0e1f2_add_cycle_tag_to_historical_snapshots.py  b2c3d4e5f6a7_add_sub_score_columns.py  b8c9d0e1f2a3_create_scoring_weights_table.py  c3d4e5f6a7b8_add_narratives_table.py  c9d0e1f2a3b4_add_twitter_columns_to_social_data.py  d1e2f3a4b5c6_add_category_column_to_tokens.py  d4e5f6a7b8c9_upgrade_alerts_table_phase11.py  e10c91a4be38_initial_schema.py  f5a6b7c8d9e0_add_ai_analyses_table.py
backend/scripts/: seed_data.py  seed_historical_data.py
backend/tests/: conftest_helpers.py  test_logging_config.py  test_main.py
backend/tests/ai/: test_llm_provider.py  test_narrative_detector.py  test_project_classifier.py  test_summary_cache_service.py  test_summary_generator.py  test_whitepaper_analyzer.py  test_whitepaper_cache_service.py
backend/tests/alerts/: test_alert_evaluator.py  test_alert_formatter.py  test_alert_rules.py  test_telegram_bot.py
backend/tests/analysis/: test_cycle_data_collector.py  test_cycle_detector.py  test_narrative_persister.py  test_narrative_trend.py
backend/tests/api/: test_rankings_server_side.py  test_routes_rankings.py  test_routes_tokens.py  test_routes_tokens_phase9.py
backend/tests/backtesting/: test_calibrator_rescoring.py  test_cycle_config.py  test_cycle_report.py  test_data_loader.py  test_ground_truth.py  test_historical_data_collector.py  test_historical_scorer.py  test_historical_scorer_weights.py  test_multi_cycle_collector.py  test_performance_metrics.py  test_real_cycle_prices.py  test_simulation_engine.py  test_validation_metrics.py  test_weight_calibrator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
infra/nginx/: nginx.conf
scripts/: ci-local.sh  create-pr.sh
(+162 files in other folders)
