[tool.poetry]
name = "crypto-ai-research-terminal"
version = "0.1.0"
description = "Personal AI-powered cryptocurrency market intelligence platform"
authors = ["pattersonrptr"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }

# Database
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
alembic = "^1.13.0"
asyncpg = "^0.30.0"
redis = { version = "^5.0.0", extras = ["hiredis"] }

# Configuration
pydantic-settings = "^2.3.0"

# Scheduling
apscheduler = "^3.10.0"

# Logging
structlog = "^24.1.0"

# HTTP client (for collectors)
httpx = "^0.27.0"
tenacity = "^8.3.0"   # retry + exponential backoff

# AI / ML
langchain = "^0.2.0"
langchain-community = "^0.2.0"
sentence-transformers = "^3.0.0"
scikit-learn = "^1.5.0"
xgboost = "^2.0.0"

# Graph
networkx = "^3.3.0"

# Reports
jinja2 = "^3.1.0"
weasyprint = ">=62.0"      # PDF generation

# CLI
typer = { version = "^0.12.0", extras = ["all"] }
rich = "^13.7.0"
pypdf = "^6.8.0"
markdown = "^3.10.2"
python-louvain = "^0.16"

# Social scraping
twikit = "^2.3.0"


[tool.poetry.group.dev.dependencies]
# Tests
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.30.0"
respx = "^0.21.0"
factory-boy = "^3.3.0"

# Linting / Formatting
ruff = "^0.4.0"

# Type checking
mypy = "^1.10.0"
types-redis = "^4.6.0"
types-Markdown = "^3.6.0"

# Security
bandit = { version = "^1.7.0", extras = ["toml"] }

# Pre-commit
pre-commit = "^3.7.0"

# Local CI runner
# act is installed as a system binary — not a Python package
aiosqlite = "^0.22.1"


[tool.poetry.scripts]
cryptoai = "app.cli:cli"


# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "S",   # bandit (via ruff)
    "N",   # pep8-naming
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any) are allowed — JSON payloads and
              # async context manager __aexit__ args are legitimately untyped at this level
    "S101",   # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["ANN", "S"]
"backend/migrations/**" = ["E501", "UP", "I", "W"]  # Auto-generated by Alembic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
exclude = ["backend/migrations/", "backend/tests/"]

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "langchain.*",
    "sentence_transformers.*",
    "networkx.*",
    "xgboost.*",
    "weasyprint.*",
    "community.*",
    "sklearn.*",
]
ignore_missing_imports = true


# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
# --cov-fail-under: raised incrementally as modules are implemented.
# Phase 7 (ML layer done, graph/backtesting stubs still empty): 15%
addopts = "--cov=backend/app --cov-report=term-missing --cov-fail-under=15"


# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["backend/app"]
skips = ["B101", "B105", "B106"]  # B101: assert, B105/B106: false positives on token_*


# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
